--- a/haskell/starve-fox/starve-fox.cabal
+++ b/haskell/starve-fox/starve-fox.cabal
@@ -3,17 +3,30 @@ name:               starve-fox
 version:            0.1.0.0
 
 library
-    exposed-modules:  StarveLib
-
-    -- Modules included in this library but not exported.
-    -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
-    hs-source-dirs:   src
+    exposed-modules:
+        StarveLib
+    build-depends:
+        base ^>=4.14.3.0
+    hs-source-dirs:
+        src
     default-language: Haskell2010
 
+test-suite starve-fox-tests
+    type:
+        exitcode-stdio-1.0
+    main-is:
+        StarveFoxSpecs.hs
+    hs-source-dirs:
+        test
+    other-modules:
+        StarveFoxTest
+    build-depends:
+        base,
+        tasty,
+        tasty-hunit,
+        tasty-quickcheck,
+        starve-fox
+        
 executable starve-fox
     main-is:          Main.hs
 
