Add test make target

--- a/haskell/starve-fox/Makefile
+++ b/haskell/starve-fox/Makefile
@@ -3,3 +3,6 @@ ghcid:
 
 ghcid-test:
 	ghcid --command "cabal repl starve-fox-tests" --test "Main.main"
+
+test:
+	cabal test --test-show-details=streaming --enable-coverage
