--- a/haskell/starve-fox/starve-fox.cabal
+++ b/haskell/starve-fox/starve-fox.cabal
@@ -6,7 +6,10 @@ library
     exposed-modules:
         StarveLib
     build-depends:
-        base ^>=4.14.3.0
+        base ^>=4.14.3.0,
+        random
+    other-modules:
+        System.Random.Shuffle
     hs-source-dirs:
         src
     default-language: Haskell2010
